# rust-ray-tracer

./: Cargo.toml  testfile.txt
src/: .camera.rs.rustfmt  camera.rs  log4rs.yml  main.rs  ray_tracer.rs  scene-test.test  scene1.test  scene2.test  scene3.test  scene4.test  shapes.rs
src/shapes/: test.rs
