[package]
name = "my-ray-tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
rust_math = "0.3.7"
image = "0.24.7"
approx = "0.5.1"
rayon = "1.10.0"
log = "0.4"
env_logger = "0.10"
log4rs="1.3.0"

[rust]
debug = true
debuginfo-level = 2

